2010-11-05  Sancho Lerena <slerena@artica.es>

	* include/config_process.php
	pandora_console.spec
	pandora_console.redhat.spec: Version update.

2010-11-04  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_reporting.php: Merged from trunk. Order results
	  before calculating the SLA.

2010-11-04  Sancho Lerena <slerena@artica.es>

	* pandoradb_data.sql
	include/config_process.php: Updated version.
	
	* include/functions_db.php: Fixed problem in function for get agent
	status on visual maps.

	* index.php: Updated development mode set to 0.

2010-11-02  Miguel de Dios  <miguel.dedios@artica.es>
	
	* operation/agentes/ver_agente.php: fixed the ajax request for
	"get_agent_modules_json" with new safe_input.

2010-11-01  Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk
	
	* include/functions_html.php: cleaned source code style. And added line
	comments for to explain obfuscated $$ operation in function
	"print_input_text_extended".
	
	* godmode/agentes/module_manager_editor_plugin.php: set the field
	"plugin_parameters" with unlimited size. 


2010-10-22  Ramon Novoa  <rnovoa@artica.es>

	* operation/agentes/networkmap.php: Use a filtered variable instead of
	  the layout name to compose temporary file names.

2010-10-20  Sergio Martin <sergio.martin@artica.es>

	* godmode/alerts/alert_list.list.php: Fixed a clone function 
	of jquery for incompatibility with IE browser for bug 3090389 
	Merged from trunk

2010-10-19  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/massive_edit_modules.php: Fixed typo in jquery
	for iexplorer compatibility merged from trunk 3090389

2010-10-15  Sergio Martin <sergio.martin@artica.es>

	* include/functions_db.php: Fixed a not defined variable config
	for bug 3087429

2010-10-14  Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk

	* godmode/agentes/module_manager_editor.php: fixed the ajax with the new
	safe_ouput function.
	
2010-10-13  Sancho Lerena <slerena@artica.es>
