@@ -14,7 +14,7 @@
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 # GNU General Public License for more details.
 
-pandora_version="3.1"
+pandora_version="3.1.1"
 
 package_pear=1
 package_pandora=1
