@@ -24,6 +24,8 @@
  */
 $build_version = 'PC101105';
 $pandora_version = 'v3.1.1';
+$develop_bypass = 0;
+
 
 /* Help to debug problems. Override global PHP configuration */
 if (!isset($develop_bypass)) $develop_bypass = 0;
